--- a/DM2024-Lab2-Homework.ipynb
+++ b/DM2024-Lab2-Homework.ipynb
@@ -7,7 +7,7 @@
     "### Student Information\n",
     "Name: 周芊妤\n",
     "\n",
-    "Student ID: S711233118\n",
+    "Student ID: 711233118\n",
     "\n",
     "GitHub ID: ChienYuuuuu\n",
     "\n",
